--- a/webapp/extended_runnable_file.html
+++ b/webapp/extended_runnable_file.html
@@ -48,7 +48,7 @@ window.swa = {
 		"ref": "NONE_SAP"
 	},
 	"custom6": {
-		"ref": "161215"
+		"ref": "161229"
 	},
 	"custom7": {},
 	"custom8": {
@@ -89,10 +89,10 @@ window.swa = {
 		"ref": "USAGE"
 	},
 	"custom4": {
-		"ref": "file"
+		"ref": null
 	},
 	"custom5": {
-		"ref": "file"
+		"ref": null
 	},
 	"custom9": {
 		"ref": null
