--- a/webapp/extended_runnable_file.html
+++ b/webapp/extended_runnable_file.html
@@ -89,10 +89,10 @@ window.swa = {
 		"ref": "USAGE"
 	},
 	"custom4": {
-		"ref": null
+		"ref": "file"
 	},
 	"custom5": {
-		"ref": null
+		"ref": "file"
 	},
 	"custom9": {
 		"ref": null
