--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="url=webapp/index.html">
+        <meta http-equiv="refresh" content="url=www/index.html">
         <script type="text/javascript">
-            window.location.href = "webapp/index.html"
+            window.location.href = "www/index.html"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='webapp/index.html'>link to example</a>
+        If you are not redirected automatically, follow the <a href='www/index.html'>link to example</a>
     </body>
 </html>
