run application as cordova application in the browser

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 
 	<head>
@@ -8,14 +8,14 @@
 		<title>CoTApproval</title>
 
 		<script id="sap-ui-bootstrap"
-			src="../resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_bluecrystal"
 			data-sap-ui-xx-bindingSyntax="complex"
 			data-sap-ui-resourceroots='{"cot": "./"}'>
 		</script>
 
-		<script type="text/javascript" src="../cordova.js"></script>
+		<script type="text/javascript" src="cordova.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
 		<script>
